search: Fix x icon overlap in search and filter inputs.
We add `padding-right` to input field so that input do not overlap with
`x`and add `text-overflow: ellipsis` to make overflow less jarring.

Fixes #19765

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -101,6 +101,10 @@
 
         #recent_topics_search {
             flex-grow: 1;
+            padding-right: 20px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
 
         .clear_search_button {
