--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -565,6 +565,10 @@ h4.stream_setting_subsection_title {
     display: inline-block;
     border-radius: 5px;
     box-shadow: none;
+    padding-right: 20px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .stream_name_search_section {
