--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1599,8 +1599,9 @@ div.focused_table {
 }
 
 .message_edit_topic_propagate {
-    width: auto;
-    margin-bottom: 5px !important;
+    display: inline-block;
+    width: 300px;
+    margin-bottom: 15px !important;
     max-width: 100%;
 }
 
@@ -1941,12 +1942,15 @@ div.focused_table {
         height: $header_height;
         padding: 0;
         padding-left: 5px;
-        padding-right: 20px;
+        padding-right: 40px;
         border: none;
         border-radius: 0;
         font-family: "Source Sans 3", sans-serif;
         font-weight: 300;
         line-height: $header_height;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
     }
 
     #search_arrows:focus {
